--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>exo noel</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" media="screen" title="no title" charset="utf-8">
   </head>
   <body>
     <header>
@@ -16,14 +17,16 @@
          </ul>
       </nav>
     </header>
-  <div class="largeur">
+    <main>
     <section class="gauche">
-      <h2>Shop Name</h2>
-      <ul>
-        <li class="bleue"><a href="#">Category 1</a></li>
-        <li><a href="#">Category 2</a></li>
-        <li class="border"><a href="#">Category 3</a></li>
-      </ul>
+        <div class="largeur">
+          <h2>Shop Name</h2>
+            <ul>
+              <li class="bleue"><a href="#">Category 1</a></li>
+              <li><a href="#">Category 2</a></li>
+              <li class="border"><a href="#">Category 3</a></li>
+            </ul>
+        </div>
     </section>
 
     <section class="droite">
@@ -33,10 +36,10 @@
            <h3>Product Name</h3>
              <span class="prix">$24.99</span>
                <p>See more snippets like these online
-                 store reviews at <a href="Bootsnipp-http://bootsnipp.com."><a/>
+                 store reviews at <a href="#">Bootsnipp-http://bootsnipp.com.</a>
                  <br>
                  Want to make these reviews work?
-                 Check out <span>this building a review system tutorial</span>
+                 Check out <strong><a href="#">this building a review system tutorial</a></strong>
                  over at maxoffsky.com!
                  <br>
                  Saepissime igitur mihi de amicitia cogitanti maxime illud considerandum
@@ -44,11 +47,62 @@
                  ut dandis recipiendisque meritis quod quisque minus per se ipse posset, id acciperet ab alio vicissimque redderet, an esset hoc quidem proprium amicitiae, sed antiquior et pulchrior et magis a natura ipsa profecta alia causa. Amor enim, ex quo amicitia nominata est,
                  princeps est ad benevolentiam coniungendam.
                </p>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star-o"></i>4.0 stars
+              <span class="prix">3 reviews</span>
          </div>
+      </article>
+      <article class="commentaire">
+
+         <button class="boutton">Leave a Review</button>
+
+         <div class="divcommentaire">
+           <i class="fa fa-star"></i>
+           <i class="fa fa-star"></i>
+           <i class="fa fa-star"></i>
+           <i class="fa fa-star"></i>
+           <i class="fa fa-star-o"></i>Anonymous
+           <span class="prix">10 days ago</span>
+           <p>
+             This product was great in terms of quality. I would definitely buy another!
+
+           </p>
+         </div>
+         <div class="divcommentaire">
+           <i class="fa fa-star"></i>
+           <i class="fa fa-star"></i>
+           <i class="fa fa-star"></i>
+           <i class="fa fa-star"></i>
+           <i class="fa fa-star-o"></i>Anonymous
+           <span class="prix">12 days ago</span>
+           <p>
+             I've alredy ordered another one!
+           </p>
+         </div>
+         <div class="divcommentaire">
+           <i class="fa fa-star"></i>
+           <i class="fa fa-star"></i>
+           <i class="fa fa-star"></i>
+           <i class="fa fa-star"></i>
+           <i class="fa fa-star-o"></i>Anonymous
+           <span class="prix">15 days ago</span>
+           <p>
+             I've seen some better than this, but not at this price. I definitely recommend this them.
+           </p>
+        </div>
 
       </article>
-
     </section>
+
+    <footer>
+      <p>
+        Copyright Your Website 2014
+      </p>
+   </footer>
+ </main>
 
   </body>
 </html>
