--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
     </header>
     <main>
     <section class="gauche">
-        <div class="largeur">
+        <!-- <div class="largeur"> -->
           <h2>Shop Name</h2>
             <ul>
               <li class="bleue"><a href="#">Category 1</a></li>
               <li><a href="#">Category 2</a></li>
               <li class="border"><a href="#">Category 3</a></li>
             </ul>
-        </div>
+        <!-- </div> -->
     </section>
 
     <section class="droite">
@@ -47,12 +47,14 @@
                  ut dandis recipiendisque meritis quod quisque minus per se ipse posset, id acciperet ab alio vicissimque redderet, an esset hoc quidem proprium amicitiae, sed antiquior et pulchrior et magis a natura ipsa profecta alia causa. Amor enim, ex quo amicitia nominata est,
                  princeps est ad benevolentiam coniungendam.
                </p>
+            <div class="etoile">
               <i class="fa fa-star"></i>
               <i class="fa fa-star"></i>
               <i class="fa fa-star"></i>
               <i class="fa fa-star"></i>
               <i class="fa fa-star-o"></i>4.0 stars
               <span class="prix">3 reviews</span>
+            </div>
          </div>
       </article>
       <article class="commentaire">
@@ -97,12 +99,12 @@
       </article>
     </section>
 
+ </main>
     <footer>
       <p>
         Copyright Your Website 2014
       </p>
    </footer>
- </main>
 
   </body>
 </html>
